<resources>
    <string name="app_name">Brew</string>
    <string name="coffee_cup_Image">coffee_cup</string>
    <string name="enter_name">Please Enter Your Name</string>
    <string name="User_name">Name</string>
    <string name="buyer_name">Please Enter Your Name</string>
    <string name="tick_done">tick_done</string>
    <string name="ok">OK</string>
    <string name="format">
        Hi, %s \n Welcome to "BREW", The best coffee shop in the world.
        Would you like to try out our coffee collections?
    </string>
    <string name="reject_button">not now</string>
    <string name="accept_button">sure</string>

    <string name="order_format">
        Hi %s, \n Please Place Your Order
    </string>
    <string name="whipped_cream">Whipped_cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="toppings">Toppings?</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="quantity">Quantity</string>
    <string name="coffee_quantity">1</string>
    <string name="about">About</string>
    <string name="developer">Developer</string>
    <string name="share">Share</string>


    <string name="whippedCream">Added Whipped Cream: %b</string>
    <string name="hasChocolate">Added Chocolate: %b </string>
    <string name="Quantity">Bought %s Cups of Coffee</string>
    <string name="Quantity_summary">Bought %d Cups of Coffee</string>
    <string name="total">Total Cost: %s </string>
    <string name="summary_format">Dear %s</string>
    <string name="order">order</string>
    <string name="Summery_thankYou">Thank You</string>
    <string name="order_summary_header">This Is Your Order Summary</string>
    <string name="espresso_cup">espresso-cup</string>
    <string name="header_motto">We give Your Day A Great Start…</string>
    <string name="intent_format">Hi, I\'m %s \nI just Ordered Coffee with these
        details\n\n%s \n\nFrom BREW Coffee Shop
    </string>

    <string name="about_message">At BREW Coffee Shop we intend to give your day a resounding start with our highly
        nutritious and great Coffee at a price that won\'t weigh down your pocket, So give your day a wonderful beginning today.
    </string>
    <string name="developer_message">
        Raheem Hammed Temitope
    </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="developer_contact">Contact Him</string>
    <string name="item_coffeeimage">item_coffeeImage</string>
    <string name="minimum_warning">You can\'t order less than 1 coffee!</string>
    <string name="maximun_warning">You can\'t order more than 10 coffee!</string>
    <string name="clear_button">Clear</string>
    <string name="history">History</string>
</resources>